force-app/main/default/objects/Feature_Offering__c/Feature_Offering__c.object-meta.xml
<CustomObject>
    <description>Used to track individual programmatic features, which UFC staff member is the primary contact, and which UFC department is putting it on.</description>
    <label>Feature Offering</label>
    <nameField>
        <displayFormat>FO-{0000000}</displayFormat>
        <label>Feature Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>