force-app/main/default/objects/Feature_Offering__c/fields/Arrival_Flight_Info__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Flight_Info__c</fullName>
    <label>Arrival Flight Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>