force-app/main/default/objects/Feature_Offering__c/fields/Captions_Requested__c.field-meta.xml
<CustomField>
    <fullName>Captions_Requested__c</fullName>
    <label>Captions Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>