force-app/main/default/objects/Feature_Offering__c/fields/Closed_Captions__c.field-meta.xml
<CustomField>
    <fullName>Closed_Captions__c</fullName>
    <label>Closed Captions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>