force-app/main/default/objects/Feature_Offering__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <inlineHelpText>Airline confirmation code.</inlineHelpText>
    <label>Confirmation Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>