force-app/main/default/objects/Feature_Offering__c/fields/Date_Film_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Film_Sent__c</fullName>
    <label>Date Film Sent</label>
    <type>Date</type>
</CustomField>