force-app/main/default/objects/Feature_Offering__c/fields/Departure_Flight_Info__c.field-meta.xml
<CustomField>
    <fullName>Departure_Flight_Info__c</fullName>
    <label>Departure Flight Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>