force-app/main/default/objects/Feature_Offering__c/fields/Development_Event__c.field-meta.xml
<CustomField>
    <fullName>Development_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Feature Offerings</relationshipLabel>
    <relationshipName>Feature_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>