force-app/main/default/objects/Feature_Offering__c/fields/DriveIn_Attrition_Rate__c.field-meta.xml
<CustomField>
    <fullName>DriveIn_Attrition_Rate__c</fullName>
    <formula>DriveIn_Vehicles_Present__c /  DriveIn_Vehicles_Registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive-In: Attrition Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>