force-app/main/default/objects/Feature_Offering__c/fields/DriveIn_Vehicles_Present__c.field-meta.xml
<CustomField>
    <fullName>DriveIn_Vehicles_Present__c</fullName>
    <label>Drive-In: Vehicles Present</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>