force-app/main/default/objects/Feature_Offering__c/fields/DriveIn_Vehicles_Registered__c.field-meta.xml
<CustomField>
    <fullName>DriveIn_Vehicles_Registered__c</fullName>
    <label>Drive-In: Vehicles Registered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>