force-app/main/default/objects/Feature_Offering__c/fields/Education_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Education_Attendance__c</fullName>
    <label>Education Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>