force-app/main/default/objects/Feature_Offering__c/fields/Event_Program_Department__c.field-meta.xml
<CustomField>
    <fullName>Event_Program_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Program Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feature Offerings</relationshipLabel>
    <relationshipName>Feature_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>