force-app/main/default/objects/Feature_Offering__c/fields/Event_Staff__c.field-meta.xml
<CustomField>
    <fullName>Event_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record of the UTFC staff member in charge of the event</description>
    <label>Event Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feature Offerings</relationshipLabel>
    <relationshipName>Feature_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>