force-app/main/default/objects/Feature_Offering__c/fields/Facebook_Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Event_Link__c</fullName>
    <label>Facebook Event Link</label>
    <type>Url</type>
</CustomField>