force-app/main/default/objects/Feature_Offering__c/fields/Facebook_Event_Reach__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Event_Reach__c</fullName>
    <label>Facebook Event Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>