force-app/main/default/objects/Feature_Offering__c/fields/Family_Sponsor_Pass__c.field-meta.xml
<CustomField>
    <fullName>Family_Sponsor_Pass__c</fullName>
    <label>Family Sponsor Pass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>