force-app/main/default/objects/Feature_Offering__c/fields/Festival_Comp__c.field-meta.xml
<CustomField>
    <fullName>Festival_Comp__c</fullName>
    <label>Festival Comp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>