force-app/main/default/objects/Feature_Offering__c/fields/Festival_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Festival_Voucher__c</fullName>
    <label>Festival Voucher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>