force-app/main/default/objects/Feature_Offering__c/fields/Fiscal_Sponsorship_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship_Annual_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Sponsorship Annual Report</label>
    <referenceTo>Fiscal_Sponsorship_Annual_Report__c</referenceTo>
    <relationshipLabel>Feature Offerings</relationshipLabel>
    <relationshipName>Feature_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>