force-app/main/default/objects/Feature_Offering__c/fields/General_Admission__c.field-meta.xml
<CustomField>
    <fullName>General_Admission__c</fullName>
    <label>General Admission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>