force-app/main/default/objects/Feature_Offering__c/fields/Geo_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Geo_Blocking__c</fullName>
    <label>Geo-Blocking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utah</fullName>
            </value>
            <value>
                <fullName>Intermountain West</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>