force-app/main/default/objects/Feature_Offering__c/fields/Instagram_Likes__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Likes__c</fullName>
    <label>Instagram Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>