force-app/main/default/objects/Feature_Offering__c/fields/Instructor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Fee__c</fullName>
    <label>Instructor Fee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>