force-app/main/default/objects/Feature_Offering__c/fields/Member_Rental_Discount__c.field-meta.xml
<CustomField>
    <fullName>Member_Rental_Discount__c</fullName>
    <label>Member Rental Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>