force-app/main/default/objects/Feature_Offering__c/fields/Non_Paid_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Non_Paid_Attendance__c</fullName>
    <label>Non-Paid Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>