force-app/main/default/objects/Feature_Offering__c/fields/Non_Screening_Type_Event__c.field-meta.xml
<CustomField>
    <fullName>Non_Screening_Type_Event__c</fullName>
    <label>Non-Screening Type Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>