force-app/main/default/objects/Feature_Offering__c/fields/Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions__c</fullName>
    <description>How many sessions/weeks are included in this workshop?</description>
    <inlineHelpText>Number of total sessions in workshop</inlineHelpText>
    <label>Number of Sessions in Workshop</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>