force-app/main/default/objects/Feature_Offering__c/fields/Number_of_Views__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Views__c</fullName>
    <label>Number of Views</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>