force-app/main/default/objects/Feature_Offering__c/fields/Open_Caption__c.field-meta.xml
<CustomField>
    <fullName>Open_Caption__c</fullName>
    <label>Open Caption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>