force-app/main/default/objects/Feature_Offering__c/fields/Outreach_Partners__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Partners__c</fullName>
    <label>Outreach Partners</label>
    <type>TextArea</type>
</CustomField>