force-app/main/default/objects/Feature_Offering__c/fields/Peek_Viewers__c.field-meta.xml
<CustomField>
    <fullName>Peek_Viewers__c</fullName>
    <label>Peak Viewers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>