force-app/main/default/objects/Feature_Offering__c/fields/Photographer_Needed__c.field-meta.xml
<CustomField>
    <fullName>Photographer_Needed__c</fullName>
    <label>Photographer Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>