force-app/main/default/objects/Feature_Offering__c/fields/Post_During_Film_Dinner__c.field-meta.xml
<CustomField>
    <fullName>Post_During_Film_Dinner__c</fullName>
    <inlineHelpText>Will there be a dinner either post or during the film?</inlineHelpText>
    <label>Post/During Film Dinner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>