force-app/main/default/objects/Feature_Offering__c/fields/Post_Film_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Post_Film_Attendance__c</fullName>
    <inlineHelpText>How many guests will be participating in the post film discussion?</inlineHelpText>
    <label>Post-Film Attendance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>