force-app/main/default/objects/Feature_Offering__c/fields/Post_Film_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Post_Film_Discussion__c</fullName>
    <inlineHelpText>Does this film have a post film discussion?</inlineHelpText>
    <label>Post-Film Discussion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>