force-app/main/default/objects/Feature_Offering__c/fields/Q_A_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Q_A_Attendance__c</fullName>
    <label>Q&amp;A Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>