force-app/main/default/objects/Feature_Offering__c/fields/Screening_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Screening_Date_Only__c</fullName>
    <formula>DATEVALUE ( Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screening Date Only</label>
    <type>Date</type>
</CustomField>