force-app/main/default/objects/Feature_Offering__c/fields/Screening_Fee__c.field-meta.xml
<CustomField>
    <fullName>Screening_Fee__c</fullName>
    <label>Screening Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>