force-app/main/default/objects/Feature_Offering__c/fields/Screening_Time_Only__c.field-meta.xml
<CustomField>
    <fullName>Screening_Time_Only__c</fullName>
    <formula>TIMEVALUE(Date_Time__c - 0.25)</formula>
    <label>Screening Time Only</label>
    <type>Time</type>
</CustomField>