force-app/main/default/objects/Feature_Offering__c/fields/Single_Screening__c.field-meta.xml
<CustomField>
    <fullName>Single_Screening__c</fullName>
    <inlineHelpText>Mark this field if the film is to be played live.</inlineHelpText>
    <label>Single Screening (Live)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>