force-app/main/default/objects/Feature_Offering__c/fields/Streaming_Link_Public__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Link_Public__c</fullName>
    <label>Streaming Link - Public</label>
    <type>Url</type>
</CustomField>