force-app/main/default/objects/Feature_Offering__c/fields/Ticket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Cost__c</fullName>
    <label>Ticket Cost</label>
    <type>TextArea</type>
</CustomField>