force-app/main/default/objects/Feature_Offering__c/fields/Ticket_Package_Pass__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Package_Pass__c</fullName>
    <label>Ticket Package or Pass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>