force-app/main/default/objects/Feature_Offering__c/fields/Ticketing_URL__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_URL__c</fullName>
    <description>Link to Ticket purchase page.</description>
    <label>Ticketing URL</label>
    <type>Url</type>
</CustomField>