force-app/main/default/objects/Feature_Offering__c/fields/Total_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendance__c</fullName>
    <formula>Education_Attendance__c + Non_Paid_Attendance__c + Paid_Attendance__c + Total_Festival_Paid_Tickets__c + Total_Festival_Non_Paid_Tickets__c + Virtual_Paid_Attendance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>