force-app/main/default/objects/Feature_Offering__c/fields/Total_Festival_Non_Paid_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Festival_Non_Paid_Tickets__c</fullName>
    <formula>Festival_Voucher__c + Festival_Comp__c + Member_Voucher__c + Development_Pass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Festival Non-Paid Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>