force-app/main/default/objects/Feature_Offering__c/fields/Total_Festival_Paid_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Festival_Paid_Tickets__c</fullName>
    <formula>General_Admission__c + 	Ticket_Package_Pass__c + Family_Sponsor_Pass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Festival Paid Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>