force-app/main/default/objects/Feature_Offering__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if a screening has been updated to fire alert email of changes to staff.  If this is the second update.  Uncheck and save the event.  Re-check the box and save it again and the email will once again fire.</inlineHelpText>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>