force-app/main/default/objects/Feature_Offering__c/fields/Utah_Film_Center_Staff__c.field-meta.xml
<CustomField>
    <fullName>Utah_Film_Center_Staff__c</fullName>
    <label>Utah Film Center Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feature Offerings</relationshipLabel>
    <relationshipName>Feature_Offerings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>