force-app/main/default/objects/Feature_Offering__c/fields/Utah_Premier__c.field-meta.xml
<CustomField>
    <fullName>Utah_Premier__c</fullName>
    <inlineHelpText>Is this the first screening of the film in Utah?</inlineHelpText>
    <label>Utah Premier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>