force-app/main/default/objects/Feature_Offering__c/fields/Videographer_Needed__c.field-meta.xml
<CustomField>
    <fullName>Videographer_Needed__c</fullName>
    <label>Videographer Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>