force-app/main/default/objects/Feature_Offering__c/fields/Virtual_Paid_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Paid_Attendance__c</fullName>
    <label>Virtual Paid Attendance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>